# bela-sys

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: hello.rs  midi.rs
ext/: Bela.h
include/: curses.h  xf86drm.h
include/alsa/: pcm.h
include/arm-linux-gnueabihf/asm/: unistd.h
include/arm-linux-gnueabihf/bits/: syscall.h
include/arm-linux-gnueabihf/c++/4.9/bits/: c++config.h
include/arm-linux-gnueabihf/python2.7/: pyconfig.h
include/autoopts/: options.h  usage-txt.h
include/c++/4.9.2/: thread
include/libffado/: ffado.h
include/linux/: version.h
include/qt4/Qt/: Qt3Support  QtCore  QtNetwork  qatomic_s390.h  qconfig.h
include/qt4/QtCore/: qatomic.h  qatomic_aarch64.h  qatomic_arch.h  qatomic_parisc.h  qbasicatomic.h  qglobal.h  qhash.h
include/qt4/QtDeclarative/: QtDeclarative
include/qt4/QtGui/: QtGui
include/qt4/QtWebKit/: QtWebKit  qwebframe.h
include/xcb/: present.h
lib/: libnative.so.3.0.0  libvrtx.so.0.0.0  libvxworks.so.1
src/: lib.rs  main.rs
