[package]
name = "bela-sys"
version = "0.1.0"
authors = ["Andrew C. Smith <andrewchristophersmith@gmail.com>"]
links = "bela"

[build-dependencies]
bindgen = "0.58"
cc = { version = "1.0", optional = true }

[dev-dependencies]
libc = "0.2"
nix = "0.22"

[features]
static = []
midi = [ "cc" ]

[[example]]
name = "hello"

[[example]]
name = "midi"
required-features = [ "midi" ]
