[package]
name = "bela-sys"
version = "0.1.0"
authors = ["Andrew C. Smith <andrewchristophersmith@gmail.com>"]
links = "bela"

[build-dependencies]
bindgen = "0.63"
cc = { version = "1.0", optional = true }
doxygen-rs = { git = "https://github.com/Techie-Pi/doxygen-rs.git", rev = "a7fee318dba1939bcd6f22a7a43de1b072552d87" }

[dev-dependencies]
libc = "0.2"
nix = "0.25"

[features]
static = []
midi = [ "cc" ]

[[example]]
name = "hello"

[[example]]
name = "midi"
required-features = [ "midi" ]
